--- a/InfestationReports/InfestationReports/Views/Human/Index.cshtml
+++ b/InfestationReports/InfestationReports/Views/Human/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Collections
+@{
     var somebody = ViewData["Human"];
 }
 <table class="table">
@@ -12,18 +13,15 @@
     </tr>
     @if (somebody.GetType() == typeof(List<Human>))
     {
-        var humans = ViewData["Human"] as List<Human>;
-
-        @foreach (var human in humans)
+        @foreach (var human in somebody as List<Human>)
         {
-            var singleHuman = human as Human;
             <tr>
-                <td>@singleHuman.FirstName</td>
-                <td>@singleHuman.LastName</td>
-                <td>@singleHuman.Age</td>
-                <td>@singleHuman.IsSick</td>
-                <td>@singleHuman.Gender</td>
-                <td>@singleHuman.CountryId</td>
+                <td>@human.FirstName</td>
+                <td>@human.LastName</td>
+                <td>@human.Age</td>
+                <td>@human.IsSick</td>
+                <td>@human.Gender</td>
+                <td>@human.CountryId</td>
             </tr>
         }
     }
