--- a/InfestationReports/InfestationReports/Views/_ViewImports.cshtml
+++ b/InfestationReports/InfestationReports/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using InfestationReports
 @using InfestationReports.Models
+@using InfestationReports.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
