--- a/InfestationReports/InfestationReports/Views/Human/Author.cshtml
+++ b/InfestationReports/InfestationReports/Views/Human/Author.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HumanAuthorsViewModel
 
-<table class="table">
-    <tr>
+<table class="table"  style="margin-top: -13px">
+     <tr style="background-color: #8cf7ff ">
         <th>Name</th>
         <th>Surname</th>
         <th>News count</th>
