--- a/InfestationReports/InfestationReports/Views/Human/News.cshtml
+++ b/InfestationReports/InfestationReports/Views/Human/News.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<News>
 
-<table class="table table-hover">
-    <tr>
+<table class="table table-hover" style="margin-top: -15px">
+    <tr style="background-color: #8cf7ff ">
         <th>Id</th>
         <th>Title</th>
         <th>Text</th>
