--- a/InfestationReports/InfestationReports/Views/Shared/_Layout.cshtml
+++ b/InfestationReports/InfestationReports/Views/Shared/_Layout.cshtml
@@ -1,29 +1,57 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> _SignInManager
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - InfestationReports</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="~/css/site.css"/>
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/> *@
+    @* <link rel="stylesheet" href="~/css/site.css"/> *@
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">InfestationReports</a>
+            <a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">Infestation reports</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
+                <ul class="ml-auto">
+                    @if (_SignInManager.IsSignedIn(User))
+                    {
+                        <div class="container" style="margin-bottom: -30px">
+                            <ul class="navbar-nav">
+                                <li class="nav-item list-inline-item">
+                                    <li class="nav-item">
+                                        <p>Hello, @User.Identity.Name</p>
+                                    </li>
+                                    <form asp-controller="Account" asp-action="Logout" style="margin-top: -10px; padding: 5px">
+                                        <button asp-controller="Account" asp-action="Logout" class="btn btn-info btn-rounded btn-sm" type="submit">Logout</button>
+                                    </form>
+                                </li>
+                            </ul>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="container" style="margin-bottom: -20px">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                                </li>
+                            </ul>
+                        </div>
+                    }
+                </ul>
+                <ul class="navbar-nav mr-auto" style="margin-bottom: -5px">
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Human" asp-action="Index">Humans</a>
                     </li>
@@ -40,15 +68,23 @@
         @RenderBody()
     </main>
 </div>
-
-<footer class="border-top footer text-muted">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
+<script>
+                            $('#sendMessageGoup input:checkbox').click(function(){
+                            	if ($(this).is(':checked')) {
+                            		 $('#sendMessageGoup input:checkbox').not(this).prop('checked', false);
+                            	}
+                            });
+</script>
+@RenderSection("NewsSection",  required: false)
+@RenderSection("ScriptForCheckBox", false)
+<footer class="border-bottom footer text-muted">
     <div class="container">
-        &copy; 2020 - InfestationReports - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2020 - Polishchuk M.
+        Infestation Reports
     </div>
 </footer>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
-@RenderSection("NewsSection", required: false)
 </body>
 </html>
